welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
}


def square(c:Color)
	{setBrosseCouleur(c)
	avance()
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	gauche()
	avance()
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	baisseBrosse()
	leveBrosse()
	gauche()}